# ibus-table

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  configure.ac  ibus-table.spec.in
debian/: changelog  control
engine/: .gitignore  .main.py.swp  .table.py.swp  Makefile.am  chinese_variants.py  compatIBus15.py  factory.py  ibus-engine-table.in  ibus-table-createdb.1  ibus-table-createdb.sgml  main.py  tabcreatedb.py  tabdict.py  table.py  table.xml  tabsqlitedb.py  tooltip-show-hotkey  tooltip-show-hotkey.patch
icons/: Makefile.am
po/: .gitignore  LINGUAS  de.po  zh_CN.po  zh_HK.po  zh_TW.po
setup/: Makefile.am  ibus-setup-table.in  ibus-table-preferences.ui  main.py  version.py.in
src/: Makefile.am  editor.c  editor.h  engine.c  engine.h  lookuptable.c  main.c  tabdict.c  tabdict.h  table.xml.in.in  tabsqlitedb.c  tabsqlitedb.h
tables/: Makefile.am  template.txt
test/: Makefile.am  cangjie5.db  test_tabsqlitedb.c
tools/: generate-chinese-variants.py  ibus-table-query
